# viet_text_tools

./: .gitignore  Makefile  README.rst  pyproject.toml  setup.py  tox.ini
requirements/: dev.in  dev.txt  main.txt
viet_text_tools/: __init__.py
viet_text_tools/tests/: test_things.py
